--- a/README.Rmd
+++ b/README.Rmd
@@ -50,7 +50,7 @@ A data scientist analyzing the Census dataset observes the following:
 ```{r tv-measure}
 library(faircause)
 
-census <- head(faircause::gov_census, n = 1000L)
+census <- head(faircause::gov_census, n = 20000L)
 TV <- mean(census$salary[census$sex == "male"]) -
   mean(census$salary[census$sex == "female"])
 
@@ -59,7 +59,7 @@ TV
 
 In the first step the data scientist computed that the average disparity in the yearly salary measured by the TV is
 
-$$ E[Y \mid x_1] - E[Y \mid x_0] = \$ 14011.$$
+$$ E[Y \mid x_1] - E[Y \mid x_0] = \$ 15053.$$
 
 The data scientist has read the Causal Fairness Analysis paper and now wants to understand how this observed disparity relates to the underlying causal mechanisms that generated it. To this end, he constructs the Standard Fairness Model (see [Plecko & Bareinboim, Definition 4]()) associated with this dataset:
 
@@ -76,8 +76,9 @@ Based on this causal structure of the variables, the data scientist now performs
 Causal Fairness Analysis by using the `fairness_cookbook()` function exported
 from the `faircause` package:
 
-```{r CFA, fig.width=8, fig.height=5}
+```{r CFA, fig.width=12, fig.height=6}
 # decompose the total variation measure
+set.seed(2022)
 tvd <- fairness_cookbook(data = census, X = X, W = W, Z = Z, Y = Y, 
                          x0 = "female", x1 = "male")
 
@@ -86,5 +87,11 @@ autoplot(tvd, decompose = "xspec", dataset = "Census 2018")
 ```
 
 The data scientist concludes that there is a substantial cancellation of the 
-direct, indirect, and spurious effects. In particular, the dataset might show
-evidence of disparate treatment, which male employees are given higher salaries.
+direct, indirect effects, namely:
+
+  - the direct effect explains \$10,300 of the observed disparity (that is, females would be paid more, had they been male in this case)
+  - the indirect effect accounts for -\$6,400 (cancelling out with the direct effect)
+  - the spurious effect accounts for \$1,000 of the observed variation
+
+In particular, the dataset might show evidence of disparate treatment, which needs
+further investigation.
