--- a/README.Rmd
+++ b/README.Rmd
@@ -61,7 +61,7 @@ In the first step the data scientist computed that the average disparity in the 
 
 $$ E[Y \mid x_1] - E[Y \mid x_0] = \$ 15053.$$
 
-The data scientist has read the Causal Fairness Analysis paper and now wants to understand how this observed disparity relates to the underlying causal mechanisms that generated it. To this end, he constructs the Standard Fairness Model (see [Plecko & Bareinboim, Definition 4]()) associated with this dataset:
+The data scientist has read the Causal Fairness Analysis paper and now wants to understand how this observed disparity relates to the underlying causal mechanisms that generated it. To this end, he constructs the Standard Fairness Model (see [Plecko & Bareinboim, Definition 4](https://causalai.net/r90.pdf)) associated with this dataset:
 
 ```{r census-sfm}
 X <- "sex" # protected attribute
