--- a/vignettes/arxiv.sty
+++ b/vignettes/arxiv.sty
@@ -29,6 +29,8 @@
 \usepackage{amstext}
 \usepackage{enumerate}
 \usepackage{enumitem}
+\usepackage{graphicx}
+\usepackage{subcaption}
 \usepackage{fancyhdr}
 \fancyhf{}
 \pagestyle{fancy}
