--- a/quarto-webpage/pages/ci-tests.Rmd
+++ b/quarto-webpage/pages/ci-tests.Rmd
@@ -27,8 +27,8 @@ It has been reported in the literature that correlation between gender and locat
 
 A data scientist is trying to understand the correlation between the features in the COMPAS dataset. The protected attribute $X$ is race, and the demographic variables $Z_1$, $Z_2$ are age and sex. The data scientist tests two hypotheses, namely:
 \begin{align}
-    H^{(1)}_0: X \ci Z_1,\\
-    H^{(2)}_0: X \ci Z_2.
+    H^{(1)}_0: X \perp\!\!\!\perp Z_1,\\
+    H^{(2)}_0: X \perp\!\!\!\perp Z_2.
 \end{align}
 To do so, the data scientist first loads the COMPAS dataset from the `faircause` package:
 ```{r}
@@ -40,8 +40,8 @@ After loading the data, the data scientist visualizes the correlations of the va
 ```{r}
 #| label: fig-compas-ci
 #| fig-cap: Association of X and Z sets on the COMPAS dataset.
-#| fig-width: 8
-#| fig-height: 4
+#| fig-width: 10
+#| fig-height: 5
 c1 <- ggplot(data, aes(x = age, fill = race)) +
   geom_density(alpha = 0.4) + theme_bw() +
   theme(
@@ -67,15 +67,13 @@ wilcox.test(data[data$race == "White", ]$age, data[data$race == "Non-White", ]$a
 ```
 In fact, both of the hypotheses are rejected ($p$-values $< 0.001$). However, possible confounders of this relationship are not measured in the corresponding dataset.
 
-Similarly, the same data scientist is now trying to understand the correlation of the features in the Government Census dataset (we skip the code to avoid repetition). The protected attribute $X$ is gender, and the demographic variables $Z_1$, $Z_2$ are age and race. The data scientist tests the independence of sex and age ($X \ci Z_1$), and sex and race ($X \ci Z_2$), and both hypotheses are rejected (p-values $< 0.001$). @fig-adult-ci shows the associations of the features. 
-
-see Fig.~\ref{fig:indeptests0} top row). Again, possible confounders of this relationship are not measured in the corresponding dataset, meaning that the attribute $X$ cannot be separated from the confounders $Z_1, Z_2$ using any of the observed variables.
+Similarly, the same data scientist is now trying to understand the correlation of the features in the Government Census dataset (we skip the code to avoid repetition). The protected attribute $X$ is gender, and the demographic variables $Z_1$, $Z_2$ are age and race. The data scientist tests the independence of sex and age ($X \perp\!\!\!\perp Z_1$), and sex and race ($X \perp\!\!\!\perp Z_2$), and both hypotheses are rejected (p-values $< 0.001$). @fig-adult-ci shows the associations of the features. Again, possible confounders of this relationship are not measured in the corresponding dataset, meaning that the attribute $X$ cannot be separated from the confounders $Z_1, Z_2$ using any of the observed variables.
 
 ```{r}
 #| label: fig-adult-ci
 #| fig-cap: Association of X and Z sets on the UCI Adult dataset.
-#| fig-width: 8
-#| fig-height: 4
+#| fig-width: 10
+#| fig-height: 5
 
 data <- get(data("gov_census", package = "faircause"))
 data <- as.data.frame(data[seq_len(20000), ])
