--- a/quarto-webpage/pages/compas-t1.Rmd
+++ b/quarto-webpage/pages/compas-t1.Rmd
@@ -4,103 +4,130 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
+library(faircause)
+library(ggplot2)
+library(ranger)
+library(latex2exp)
 knitr::opts_chunk$set(echo = TRUE)
 root <- rprojroot::find_root(rprojroot::is_git_root)
 r_dir <- file.path(root, "r")
 invisible(lapply(list.files(r_dir, full.names = TRUE), source))
 invisible(lapply(list.files(file.path(root, "scripts", "helpers"),
                             full.names = TRUE), source))
+set.seed(2023)
 ```
 
-In this vignette, we generalize the analysis of the Fairness Cookbook, to consider more refined settings described by an arbitrary causal diagram. The main motivation for doing so comes from the observation that when analyzing disparate impact, quantities such as Ctf-DE$_{x_0,x_1}(y\mid x_0)$, Ctf-IE$_{x_0,x_1}(y\mid x_0)$, and Ctf-SE$_{x_0,x_1}(y)$ are insufficient to account for certain _business necessity_ requirements. For concreteness, consider the following example. 
+Courts in Broward County, Florida use machine learning to predict whether individuals released on parole are at high risk of re-offending within 2 years ($Y$). The algorithm is based on the demographic information $Z$ ($Z_1$ for gender, $Z_2$ for age), race $X$ ($x_0$ denoting White, $x_1$ Non-White), juvenile offense counts $J$, prior offense count $P$, and degree of charge $D$.
 
-## COMPAS under Business Necessity
-
-The courts at Broward County, Florida, were using machine learning to predict whether individuals released on parole are at high risk of re-offending within 2 years. The algorithm is based on the demographic information $Z$ ($Z_1$ for gender, $Z_2$ for age), race $X$ ($x_0$ denoting White, $x_1$ Non-White), juvenile offense counts $J$, prior offense count $P$, and degree of charge $D$.
-
-```{r, engine = 'tikz'}
-#| label: fig-compas-bn
-#| fig-cap: Causal diagram of the COMPAS dataset. Business Necessity variables highlighted in green.
-#| fig-width: 4
-#| fig-height: 2
-#| echo: false
-\begin{tikzpicture}
-	 	[>=stealth, rv/.style={thick}, rvc/.style={triangle, draw, thick, minimum size=8mm}, node distance=7mm]
-	 	\pgfsetarrows{latex-latex};
-	 	\begin{scope}
-	 	\node[rv, draw, fill=green!40!gray] (c) at (2.25,1.5) {${Z_1}$};
-	 	\node[rv] (z2) at (3.75,1.5) {${Z_2}$};
-	 	\node[rv] (a) at (0,0) {$X$};
-	 	\node[rv] (m) at (1.5,-1.5) {$J$};
-	 	\node[rv, draw, fill=green!40!gray] (l) at (3,-1.5) {$P$};
-	 	\node[rv, draw, fill=green!40!gray] (r) at (4.5,-1.5) {${D}$};
-	 	\node[rv] (y) at (6,0) {$Y$};
-	 	\draw[->] (c) -- (m);
-	 	\draw[->] (c) -- (l);
-	 	\draw[->] (c) -- (r);
-	 	\draw[->] (c) -- (y);
-	 	\draw[->] (a) -- (m);
-	 	\draw[->] (m) -- (l);
-	 	\draw[->] (l) -- (r);
-	 	
-	 	% edges
-	 	\path[->] (a) edge[bend left = 0] (l);
-	 	\path[->] (a) edge[bend left = 10] (r);
-	 	\path[->] (a) edge[bend left = 0] (y);
-	 	\path[->] (m) edge[bend right = 25] (r);
-	 	\path[->] (m) edge[bend right = -10] (y);
-	 	\path[->] (r) edge[bend right = 0] (y);
-	 	
-	 	\path[->] (z2) edge[bend right = 0] (y);
-	 	\path[->] (z2) edge[bend right = 0] (l);
-	 	\path[->] (z2) edge[bend right = 0] (r);
-	 	\path[->] (z2) edge[bend right = 0] (m);
-	 	
-	 	%bidirected
-		\path[<->,dashed] (a) edge[bend left = 0](c);
-		\path[<->,dashed] (a) edge[bend left = 0](z2);
-	 	\end{scope}
-\end{tikzpicture}
-```
-
-A causal analysis using the `fairness_cookbook()` revealed that:
+In this vignette, we perform the task of bias detection on this dataset. We begin by loading and pre-processing the original data:
 
 ```{r}
-#| label: fig-compas-cookbook
-#| fig-cap: Fairness Cookbook on the COMPAS dataset.
-#| fig-width: 8
-#| fig-height: 6
-data <- get(data("compas", package = "faircause"))
-set.seed(2022)
-mdata <- get_metadata("compas")
-fc_compas <- fairness_cookbook(data, X = mdata$X, Z = mdata$Z, W = mdata$W,
-                               Y = mdata$Y, x0 = mdata$x0, x1 = mdata$x1)
 
-autoplot(fc_compas, decompose = "xspec", dataset = "COMPAS")
+data <- read.csv(file.path(root, "inst", "extdata",
+                           "compas-scores-two-years.csv"))
+col.keep <- which(
+  names(data) %in% c("age", "sex", "juv_fel_count",
+                     "juv_misd_count", "juv_other_count", "priors_count",
+                     "c_charge_degree", "race", "two_year_recid", "decile_score")
+)
+data <- data[, col.keep]
+data$race <- factor(data$race)
+levels(data$race) <- c("Minority", "Minority", "Majority", "Minority",
+                       "Minority", "Minority")
+data$race <- relevel(data$race, "Majority")
+cumsum(table(data$decile_score)) / sum(table(data$decile_score))
+# decile_score > 4 represents high risk (approximately)
+data$northpointe <- as.integer(data$decile_score > 4)
+data$decile_score <- NULL
+names(data) <- gsub("_count", "", names(data))
+names(data)[which(names(data) == "c_charge_degree")] <- "charge"
+
+knitr::kable(head(data), caption = "COMPAS dataset.")
 ```
 
-That is, the computed measures equal:
-$$
-\begin{align}
-  \text{Ctf-IE}_{x_1, x_0}(y\mid x_1) &= -5.7\% \pm 0.5\%,\\
-  \text{Ctf-SE}_{x_1, x_0}(y) &= -4.0\% \pm 0.9\%,
-\end{align}
-$$
-and are also shown graphically in @fig-compas-cookbook, potentially indicating presence of disparate impact. Based on this information, a legal team of ProPublica filed a lawsuit to the district court, claiming discrimination w.r.t. the Non-White subpopulation based on the doctrine of disparate impact. After the court hearing, the judge rules that using the attributes age ($Z_2$), prior count ($P$), and charge degree ($D$) is not discriminatory, but using the attributes juvenile count ($J$) and gender ($Z_1$) is discriminatory. The causal diagram with a visualization of which variables are included in the business-necessity set is given in @fig-compas-bn.
-Data scientists at ProPublica need to consider how to proceed in the light of this new requirement for discounting the allowable attributes in the quantiative analysis. 
+In Causal Fairness Analysis, we are interested in decomposing the TV measure (also known as the parity gap), into its direct, indirect, and spurious components. We show the causal diagram associated with the data, and also a representation of how the target effects can be visualized as follows:
 
-The difficulty in this example is that the quantity Ctf-SE$_{x_1, x_0}(y)$ measures the spurious discrimination between the attribute $X$ and outcome $Y$ as generated by _both confounders_ $Z_1$ and $Z_2$. Since using the confounder $Z_2$ is not considered discriminatory, but using the confounder $Z_1$ is, the quantity Ctf-SE$_{x_1, x_0}(y)$ needs to be refined such that the spurious variations based on the different confounders are disentangled. In particular, one might be interested in finding a decomposition of the spurious effect such that
-$$
-\begin{align}
-    \text{Ctf-SE}_{x_1, x_0}(y) = \underbrace{\text{Ctf-SE}^{Z_1}_{x_1, x_0}(y)}_{\text{gender variations}} + \underbrace{\text{Ctf-SE}^{Z_2}_{x_1, x_0}(y)}_{\text{age variations}},
-\end{align}
-$$
-which would allow the data analyst to further distinguish the variations explained by each of the confounders. A similar challenge is present for the Ctf-IE$_{x_1, x_0}(y\mid x_1)$ measure, since it has contributions explained by juvenile offense counts $J$, prior counts $P$, and the charge degree $D$. Therefore, we might be interested in decomposing the indirect effect into
-$$
-\begin{align}
-    \text{Ctf-IE}_{x_1, x_0}(y \mid x_1) =& \underbrace{\text{Ctf-IE}^J_{x_1, x_0}(y \mid x_1)}_{\text{juvenile count variations}} + \underbrace{\text{Ctf-IE}^P_{x_1, x_0}(y \mid x_1)}_{\text{prior count variations}} \\ &+ \underbrace{\text{Ctf-IE}^D_{x_1, x_0}(y \mid x_1)}_{\text{charge degree variations}}. \nonumber
-\end{align}
-$$
-Again, such a decomposition would allow the data analyst to better understand the contribution of each of the mediators to the totality of the indirect effect. In situations when some mediating variables are in the business necessity set, while others are not, such a decomposition would allow for assessment of disparate impact claims.
+::: {layout="[[1,1], [1, 1]]"}
+![COMPAS Causal Diagram](../figs/a.png){#fig-compas-sfm}
 
-### Towards the solution
+![Direct effect visualization.](../figs/b.png){#fig-dir-effect}
+
+![Indirect effect visualization.](../figs/c.png){#fig-indir-effect}
+
+![Confounded effect visualization.](../figs/d.png){#fig-conf-effect}
+:::
+
+After obtaining the data, we then specify the Standard Fairness Model, and decompose the TV measure for the true outcome $Y$:
+```{r, fig.width = 9, fig.height = 6, fig.cap = "Causal decomposition of the TV measure for two-year recidivism.", fig.align='center', out.width = "95%"}
+
+X <- "race"
+Z <- c("age", "sex")
+W <- c("juv_fel", "juv_misd", "juv_other", "priors", "charge")
+Y <- c("two_year_recid")
+two_year <- fairness_cookbook(data, X = X, W = W, Z = Z, Y = Y,
+                              x0 = "Majority", x1 = "Minority")
+
+autoplot(two_year, decompose = "xspec") + 
+  ggtitle(TeX("$Y$ disparity decomposition COMPAS"))
+```
+
+However, we are also interested in the disparity for the predictor $\widehat{Y}$, so we can decompose the TV measure for the predictor, too:
+```{r, fig.width = 9, fig.height = 6, fig.cap = "Causal decomposition of the TV measure for Northpointe's predictions.", fig.align='center', out.width = "95%"}
+Yhat <- "northpointe"
+north_decompose <- fairness_cookbook(data, X = X, W = W, Z = Z, Y = Yhat,
+                                     x0 = "Majority", x1 = "Minority")
+autoplot(north_decompose, decompose = "xspec") +
+  ggtitle(TeX("$\\widehat{Y}$ disparity decomposition COMPAS"))
+```
+
+To perform the complete analysis, we plot the two results side-by-side, and shade the areas depending on whether the associated measure is included in the business necessity set or not:
+
+```{r, echo=FALSE, fig.width = 9, fig.height = 6, fig.cap = "Causal decompositions of the TV measure for the true and predicted outcomes visualized together.", fig.align='center', out.width = "95%"}
+
+df <- rbind(
+  cbind(summary(two_year)$measures, Outcome = "truth"),
+  cbind(summary(north_decompose)$measures, Outcome = "prediction")
+)
+
+xlabz <- c(
+  tv = TeX("$TV_{x_0, x_1}(y)$"),
+  ctfde = TeX("$Ctf$-$DE_{x_0, x_1}(y | x_0)$"),
+  ctfie = TeX("$Ctf$-$IE_{x_1, x_0}(y | x_0)$"),
+  ctfse = TeX("$Ctf$-$SE_{x_1, x_0}(y)$")
+)
+
+df <- df[df$measure %in% c("tv", "ctfde", "ctfse", "ctfie"), ]
+df$measure <- as.factor(df$measure)
+
+ggplot(df, aes(x = measure, y = value, fill = measure,
+               color = Outcome, ymin = value - 1.96*sd, ymax = value + 1.96*sd)) +
+  geom_bar(position="dodge", stat = "identity", linewidth = 1.5) +
+  theme_minimal() +
+  geom_errorbar(
+    aes(group = Outcome),
+    position = position_dodge(0.9),
+    color = "black", width = 0.25
+  ) +
+  theme(
+    legend.position = c(0.15, 0.8),
+    legend.box.background = element_rect(),
+    legend.text = element_text(size = 12),
+    axis.text = element_text(size = 16),
+    axis.title.x = element_text(size = 18),
+    axis.text.x = element_text(angle = 45, vjust = 1, hjust=1),
+    title = element_text(size = 16)
+  ) + scale_x_discrete(labels = xlabz) +
+  xlab("Causal Fairness Measure") +
+  guides(fill="none") +
+  scale_color_manual(values = c("red", "black")) +
+  ggtitle("COMPAS Task 1 Analysis") +
+  geom_rect(aes(xmin = 0.5, xmax = 1.5, ymin = -0.1, ymax = 0.2),
+            fill = "red", alpha = 0.01, linewidth = 0.05,
+            linetype = "dotted") +
+  geom_rect(aes(xmin = 1.5, xmax = 2.5, ymin = -0.1, ymax = 0.2),
+            fill = "green", alpha = 0.01, linewidth = 0.05,
+            linetype = "dotted") +
+  geom_rect(aes(xmin = 2.5, xmax = 3.5, ymin = -0.1, ymax = 0.2),
+            fill = "green", alpha = 0.01, linewidth = 0.05,
+            linetype = "dotted")
+```
