--- a/quarto-webpage/pages/census-t1.Rmd
+++ b/quarto-webpage/pages/census-t1.Rmd
@@ -56,7 +56,7 @@ She then inputs this SFM projection into the `faircause` R-package,
 set.seed(2022)
 mdata <- SFM_proj("census")
 mdata
-fc_census <- fairness_cookbook(data, X = mdata$X, Z = mdata$Z, W = mdata$W,
+fc_census <- fairness_cookbook(as.data.frame(data), X = mdata$X, Z = mdata$Z, W = mdata$W,
                                Y = mdata$Y, x0 = mdata$x0, x1 = mdata$x1)
 
 autoplot(fc_census, decompose = "xspec", dataset = "Census")
