--- a/quarto-webpage/pages/compas-t1.Rmd
+++ b/quarto-webpage/pages/compas-t1.Rmd
@@ -22,7 +22,6 @@ Courts in Broward County, Florida use machine learning to predict whether indivi
 In this vignette, we perform the task of bias detection on this dataset. We begin by loading and pre-processing the original data:
 
 ```{r}
-
 data <- read.csv(file.path(root, "inst", "extdata",
                            "compas-scores-two-years.csv"))
 col.keep <- which(
@@ -130,4 +129,7 @@ ggplot(df, aes(x = measure, y = value, fill = measure,
   geom_rect(aes(xmin = 2.5, xmax = 3.5, ymin = -0.1, ymax = 0.2),
             fill = "green", alpha = 0.01, linewidth = 0.05,
             linetype = "dotted")
+
+# ggsave(file = "~/Desktop/compas-task1-analysis.png",
+#        width = 6, height = 4)
 ```
